fix: :bug: Fixes warning "autoprefixer: Replace fill-available to stretch, because spec had been changed"

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,8 +3,7 @@
 @tailwind utilities;
 
 .fill-available {
-  width: 100%;
-  width: -moz-available; /* WebKit-based browsers will ignore this. */
-  width: -webkit-fill-available; /* Mozilla-based browsers will ignore this. */
-  width: fill-available;
+  max-width: -webkit-fill-available;
+  max-width: -moz-available;
+  max-width: stretch;
 }
